@@ -129,7 +129,7 @@ sammy.get
                 {
                   fields++;
                   $( '[name="' + key + '"]', analysis_form )
-                    .val( context.params[key].replace( /\+/g, ' ' ) );
+                    .val( context.params[key] );
                 }
               }
 
@@ -250,7 +250,8 @@ sammy.get
               var params = $.param( compute_analysis_params() )
                             .replace( /[\w\.]+=\+*(&)/g, '$1' ) // remove empty parameters
                             .replace( /(&)+/, '$1' )            // reduce multiple ampersands
-                            .replace( /^&/, '' );               // remove leading ampersand
+                            .replace( /^&/, '' )                // remove leading ampersand
+                            .replace( /\+/, '%20' );            // replace plus-signs with encoded whitespaces
 
               context.redirect( context.path.split( '?' ).shift() + '?' + params );
               return false;
